[project]
name = "birthime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fleetingbytes", email = "7075397+fleetingbytes@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
birthime = "birthime:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
